Update bff_browser html

--- a/utils/bff_browser/static/jobs/cineca_uk1_173625581783940/browser/173625581783940.html
+++ b/utils/bff_browser/static/jobs/cineca_uk1_173625581783940/browser/173625581783940.html
@@ -2,28 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Beacon Friendly Format Genomic Variations Browser</title>
+    <title>BFF Browser - Genomic Variations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Beacon Friendly Format Genomic Variations Browser">
     <meta name="author" content="Manuel Rueda"> 
 
       <!-- Le styles -->
-    <link rel="icon" href="web/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="web/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="web/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="web/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="web/jsD/media/css/jquery.dataTables.css">
-    <link rel="stylesheet" type="text/css" href="web/jsD/media/css/dataTables.colReorder.css">
-    <link rel="stylesheet" type="text/css" href="web/jsD/media/css/dataTables.colVis.css">
-    <link rel="stylesheet" type="text/css" href="web/jsD/media/css/dataTables.tableTools.css">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/jsD/media/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="assets/jsD/media/css/dataTables.colReorder.css">
+    <link rel="stylesheet" type="text/css" href="assets/jsD/media/css/dataTables.colVis.css">
+    <link rel="stylesheet" type="text/css" href="assets/jsD/media/css/dataTables.tableTools.css">
    
-    <script src="web/js/jquery.min.js"></script>
-    <script src="web/js/bootstrap.min.js"></script>
-    <script src="web/jsD/media/js/jquery.dataTables.min.js"></script>
-    <script src="web/jsD/media/js/dataTables.colReorder.js"></script>
-    <script src="web/jsD/media/js/dataTables.colVis.js"></script>
-    <script src="web/jsD/media/js/dataTables.tableTools.js"></script>
-    <script src="web/js/jqBootstrapValidation.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/jsD/media/js/jquery.dataTables.min.js"></script>
+    <script src="assets/jsD/media/js/dataTables.colReorder.js"></script>
+    <script src="assets/jsD/media/js/dataTables.colVis.js"></script>
+    <script src="assets/jsD/media/js/dataTables.tableTools.js"></script>
+    <script src="assets/js/jqBootstrapValidation.js"></script>
 
    <script type="text/javascript" language="javascript" class="init">
 
@@ -132,7 +132,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">BFF Genomic Variations Browser</a>
+                    <a class="brand" href="#">BFF Browser - Genomic Variations</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="dropdown">
@@ -267,7 +267,7 @@
 
       </div>
 
-      <br /><p class="pagination-centered">Beacon-Friendly-Format Genomic Variations Browser</p> 
+      <br /><p class="pagination-centered">BFF Browser - Genomic Variations</p> 
       <hr>
       <!-- FOOTER -->
       <footer>
